@@ -1,3 +1,8 @@
+2011-08-30  Reinhard Max  <max@suse.de>
+
+	* unix/tclUnixSock.c (TcpWatchProc): Put back the check for server
+	sockets (bug #3394732).
+
 2011-08-29  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclIORTrans.c: Leak of ReflectedTransformMap.
